<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PokedexActivity">

    <ImageView
        android:id="@+id/iviPokemon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tviNombrePokemon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2sp"
            android:layout_marginTop="2sp"
            android:text="@string/text_textview_nombre_mispokemones"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_textview_nivel_mispokemones"
            android:textAlignment="textStart"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tviNivelPokemon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_textview_nivelrespuesta_mispokemones"
            android:textAlignment="textStart"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_textview_tipo_mispokemones"
            android:textAlignment="textStart"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tviTipoPokemon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_textview_tiporespuesta_mispokemones"
            android:textAlignment="textStart"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tviDescripcionPokemon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4sp"
            android:text="@string/text_textview_descripcion_mispokemones"
            android:textAlignment="textStart"
            android:textSize="24sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/butAnterior"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:text="@string/text_button_anterior_mispokemones"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/butMenu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:text="@string/text_button_menu_mispokemones"
            android:textSize="20sp" />

        <Button
            android:id="@+id/butSiguiente"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:text="@string/text_button_siguiente_mispokemones"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>
