<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pe.com.chfernandezrios.pokemontradingcards.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/tviPokemon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Pokemon"
                android:textAlignment="center"
                android:textSize="56sp" />

            <TextView
                android:id="@+id/tviTradingCards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tviPokemon"
                android:text="@string/TradingCards"
                android:textAlignment="center"
                android:textSize="34sp" />

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:orientation="vertical">

        <EditText
            android:id="@+id/eteUsuarioLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_edittext_username" />

        <EditText
            android:id="@+id/etePasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_edittext_password"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/butLoginLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_button_login_login" />

            <Button
                android:id="@+id/butRegistroLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_button_registro_login" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>